--- a/public/offline.html
+++ b/public/offline.html
@@ -35,9 +35,9 @@
         </style>
     </head>
     <body>
-        <div class="city">
-            <h2 class="city-name">
-                <span>Please go online to check the current weather.</span>
+    
+            <h2>
+                <span>Please go online to Load the App.</span>
             </h2>
         </div>
     </body>
