--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,17 @@
 <html lang="en" class="">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./images/logo.png" />
+    <link rel="icon" href="./logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="PWa Weather App" />
-    <link rel="apple-touch-icon" href="./images/logo.png" />
+    <meta name="description" content="Expense Tracker for tracking finances" />
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="manifest" href="./manifest.json" />
     <title>Expense Tracker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', ()=>{
-          navigator.serviceWorker.register('./serviceworker.js').then(reg => console.log('Success: ', reg.scope)).catch(err => console.log('Failure: ', err))
-        })
-      }
-    </script>
   </body>
 </html>
